<resources>
    <string name="app_name">Music App</string>
    <string name="greeting_message">Hello User!</string>
    <string name="recently_played">Recently Played</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="recommended">Recommended</string>
    <string name="popular">Popular</string>
    <string name="go_back">Go back</string>
    <string name="switch_theme">Switch theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="logout">Log out</string>
    <string name="login">Log in</string>
    <string name="register_here">Don\'t have an account? Register here.</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login_here">Have an account? Log in here</string>
    <string name="recently_played_page">Recently played page</string>
    <string name="featured">Featured</string>
    <string name="switch_artist">Artist</string>
    <string name="label_email">Email:   </string>
    <string name="upload">Upload</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="skip_previous">Skip previous</string>
    <string name="skip_next">Skip next</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="song_start_time">00:00</string>
    <string name="default_notification_channel_id">201</string>
    <string-array name="genre_array">
        <item>Rock</item>
        <item>Pop</item>
        <item>Dance</item>
        <item>Traditional</item>
        <item>Misc</item>
    </string-array>

    <string-array name="filter_by_array">
        <item>Artist</item>
        <item>Genre</item>
        <item>Release year</item>
    </string-array>

</resources>