<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBarLayout with top bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationContentDescription="@string/go_back">

            <!-- Page name in the middle -->
            <TextView
                android:id="@+id/page_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:textSize="24sp" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main content of the activity -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Body section of the main activity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="14dp"
            android:paddingBottom="60dp">

            <TextView
                android:id="@+id/settings_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadingEdge="horizontal|vertical"
                android:fontFamily="sans-serif-medium"
                android:text="Name"
                android:textColor="#673AB7"
                android:textSize="28sp"
                android:layout_gravity="center"></TextView>

            <TextView
                android:id="@+id/settings_text_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadingEdge="horizontal|vertical"
                android:fontFamily="sans-serif-medium"
                android:text="Bio"
                android:textSize="18sp"
                android:layout_gravity="center"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/settings_label_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:paddingLeft="10dp" />

            </LinearLayout>

            <!-- Switch theme button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_theme"
                    android:textSize="18sp"
                    app:switchPadding="14dp" />

            </LinearLayout>


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_artist"
                android:textSize="18sp"
                app:switchPadding="14dp" />
            <!-- Logout button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/logout"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
