<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBarLayout with top bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top bar with greeting message, notification button, recently played button, and settings button -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <!-- Greeting message on the left -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/greeting_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/greeting_message"
                android:textSize="22sp" />

            <!-- Notification button, recently played button, and settings button on the right -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">

                <!-- Button for creating a new playlist -->
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/create_playlist_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/notifications"
                    android:src="@drawable/ic_plus" />



                <!-- Social played button -->
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/social_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/recently_played_page"
                    android:src="@drawable/ic_social" />

                <!-- Settings button -->
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/settings_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_settings" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main content of the activity -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Body section of the main activity -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:paddingBottom="60dp">

            <LinearLayout
                android:id="@+id/recommended_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="14dp"
                app:layout_constraintTop_toTopOf="@id/body">

                <!-- Recommended playlists or artists -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/recommended_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginHorizontal="14dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommended_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="7dp"
                    android:clipToPadding="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/recently_played_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="14dp"
                app:layout_constraintTop_toBottomOf="@id/recommended_list">

                <!-- Jump back in carousel for playlists recently played -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/recently_played_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recently_played"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginHorizontal="14dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recently_played_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="7dp"
                    android:clipToPadding="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/popular_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="14dp"
                app:layout_constraintTop_toBottomOf="@+id/recently_played_list">

                <!-- Popular carousel for popular playlists -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/popular_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginHorizontal="14dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="7dp"
                    android:clipToPadding="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/featured_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="14dp"
                app:layout_constraintTop_toBottomOf="@+id/popular_list">

                <!-- Popular carousel for popular playlists -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/featured_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/featured"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginHorizontal="14dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="7dp"
                    android:clipToPadding="false" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
