<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBarLayout with top bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top bar with greeting message, notification button, recently played button, and settings button -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <!-- Greeting message on the left -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/greeting_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/greeting_message"
                android:textSize="22sp" />

            <!-- Notification button, recently played button, and settings button on the right -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">

                <!-- Button for creating a new playlist -->
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/create_playlist_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/notifications"
                    android:src="@drawable/ic_plus" />



                <!-- Social played button -->
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/social_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/recently_played_page"
                    android:src="@drawable/ic_social" />

                <!-- Settings button -->
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/settings_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_settings" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <!-- Main content of the activity -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/song_search"
                    android:hint="Search here"></EditText>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="search"
                    android:textSize="12sp"
                    android:layout_gravity="end"></com.google.android.material.button.MaterialButton>

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_songs_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:paddingHorizontal="7dp"
                android:clipToPadding="false" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
